# harvest

./: .gitignore  Readme.md  harvest.cabal
data/: Readme.md
data/cat-cat/: watersport.csv
data/cat-cat/mushrooms/: mushrooms.ipynb  mushrooms.md
data/cat-cat/ramen/: Munge.hs  Readme.md  ramen-words.csv
data/cat-con/fishmarket/: fishmarket.ipynb
data/cat-con/iris/: iris.ipynb
data/discrete/: tennis.csv
src/Harvest/Harvest/Concept/: FindS.hs
src/Harvest/Harvest/Neural/: Perceptron.hs
src/main/finds/: Main.hs
src/main/perceptron/: Config.hs  Main.hs  Readme.md
