
name:           harvest
version:        0.1
license:        MIT
author:         Ben Lippmeier <benl@ouroborus.net>
maintainer:     Ben Lippmeier <benl@ouroborus.net>
cabal-version:  > 1.8
synopsis:       Direct implementations of machine learning algorithms.
build-type:     Simple

library
 hs-source-dirs: src/harvest
 build-depends:  base, text, containers, extra, comma, random
 ghc-options: -O2
 extensions:
        ScopedTypeVariables,
        OverloadedStrings,
        ParallelListComp,
        PatternGuards,
        BangPatterns

 exposed-modules:
        Harvest.Concept.FindS
        Harvest.Neural.Perceptron


executable harvest-finds
 hs-source-dirs: src/main/finds
 main-is:       Main.hs
 ghc-options:   -O2
 build-depends: base, text, comma, harvest
 extensions:    OverloadedStrings

executable harvest-perceptron
 hs-source-dirs: src/main/perceptron
 main-is:       Main.hs
 ghc-options:   -O2
 build-depends: base, text, containers, extra, comma, harvest, random
 extensions:
        ScopedTypeVariables,
        OverloadedStrings,
        ParallelListComp,
        PatternGuards,
        BangPatterns

